--- a/app.html
+++ b/app.html
@@ -7,16 +7,18 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./game.css">
+
     </head>
 
     <body>
 
         <h1>Snake Game</h1>
-        <canvas id="gameBoard"></canvas>
+        <button onClick="window.location.reload();">Restart &olarr;</button>
+        <canvas id="game-board" width="625px" height="625px"></canvas>
 
-        <script src="./game.js" async defer></script>
-        <script src="./move.js" async defer></script>
-        <script src="./snake.js" async defer></script>
-        <script src="./food.js" async defer></script>
+        <script src="game.js" async defer></script>
+        <script src="move.js" async defer></script>
+        <script src="snake.js" async defer></script>
+        <script src="food.js" async defer></script>
     </body>
 </html>
