Level card & sound effect credit added

--- a/app.html
+++ b/app.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>Snake Game</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./game.css">
@@ -15,7 +15,8 @@
         <h1>Snake Game</h1>
         <button onClick="window.location.reload();">Restart &olarr;</button>
         <canvas id="game-board" width="625px" height="625px"></canvas>
-
+        <cite class="credit">Sound effect source: <a href="http://freesoundeffect.net/"> Freesoundeffect.net</a></cite>
+      
         <script src="game.js" async defer></script>
         <script src="move.js" async defer></script>
         <script src="snake.js" async defer></script>
