--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>Snake Game</h1>
         <button onClick="window.location.reload();">Restart &olarr;</button>
         <canvas id="game-board" width="625px" height="625px"></canvas>
-        <cite class="credit">Sound effect source: <a href="http://freesoundeffect.net/"> Freesoundeffect.net</a></cite>
+        <cite class="credit">Sound effect source: <a href="http://freesoundeffect.net/" target="blank"> Freesoundeffect.net</a></cite>
       
         <script src="game.js" async defer></script>
     </body>
